@@ -1,4 +1,9 @@
-<<<<<<< HISTORY
+TAG: lib_java_dbsmgd-3-4-1-2
+DATE: 01/10/06
+STAFF: jsb
+CHANGES:
+1) changes for Deltagen/Lexicon links on allele detail
+
 TAG: lib_java_dbsmgd-3-4-1-1
 DATE: 12/2/05
 STAFF: pf
